[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/ingame/pausemenu/pausemenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupDialog" type="PopupDialog" parent="."]
visible = true
margin_right = 400.0
margin_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 3
size_flags_vertical = 7
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1.52588e-05
margin_bottom = -1.52588e-05
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupDialog/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 383.0
margin_bottom = 383.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="PopupDialog/MarginContainer/VBoxContainer"]
margin_top = 149.0
margin_right = 367.0
margin_bottom = 169.0
size_flags_horizontal = 3
text = "Resume"

[node name="Options" type="Button" parent="PopupDialog/MarginContainer/VBoxContainer"]
margin_top = 173.0
margin_right = 367.0
margin_bottom = 193.0
size_flags_horizontal = 3
text = "Options"

[node name="Quit" type="Button" parent="PopupDialog/MarginContainer/VBoxContainer"]
margin_top = 197.0
margin_right = 367.0
margin_bottom = 217.0
size_flags_horizontal = 3
text = "Quit"
[connection signal="pressed" from="PopupDialog/MarginContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="PopupDialog/MarginContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="PopupDialog/MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
